# 0

./: .env  .gitignore  .windsurfrules  CLAUDE.md  README.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  python-requirements.txt
.claude/commands/: wrap.md
_docs/: ARCHITECTURE_OVERVIEW.md  EXPLORATION_SUMMARY.txt  PROJECT_STATUS_OVERVIEW.md  QUICK_REFERENCE.md  SCREEN_CAPTURE.md  VIDEO_ENCODING_NOTES.md
_docs/devlog/: 2025-01-04-keyboard-monitoring-frontend-integration.md  2025-01-04-keyboard-monitoring-macos.md  2025-01-04-os-monitor-abstraction-layer.md  2025-01-04-session-management-profiling.md  2025-01-04-session-wrap-input-monitoring-complete.md  2025-01-04-task-4.2-cross-platform-keyboard-monitoring.md  2025-01-04-task-4.3-cross-platform-mouse-monitoring.md  2025-01-04-task-4.4-input-event-storage-querying.md  2025-01-04-task-4.5-command-recognition.md  2025-01-04-task-5.1-ocr-engine-setup.md  2025-01-04-task-5.2-ocr-processing-pipeline.md  2025-01-04-task-5.3-full-text-search.md  2025-01-10-phase-2-3-recording-and-os-monitoring.md  2025-10-01-consent-management-system.md  2025-10-01-database-foundation-implementation.md  2025-10-01-tauri-project-scaffolding.md  (+8 more)
backend/: .env  Dockerfile  main.py  requirements.txt
docs/: IMPLEMENTATION_README.md  ML_SETUP_GUIDE.md  devlog-pose-audio-modules.md  devlog.md  implementation-status.md  ml-integration-guide.md  pose-audio-modules-architecture.md
nextjs-app/: Dockerfile  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  example-frontend-call.js  tauri.conf.json
src-tauri/data-manager/: Cargo.toml
src-tauri/data-manager/src/: lib.rs
src-tauri/examples/: test_capture.rs  test_database.rs  test_os_monitor.rs  test_platform.rs  test_video_encoding.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250104000001_create_ocr_tables.sql  20251001000001_create_sessions_table.sql  20251001000002_create_consent_records_table.sql  20251003000001_create_frames_table.sql  20251003000002_update_sessions_table.sql  20251003000003_create_video_segments_table.sql  20251003000004_add_dynamic_recording_fields.sql  20251118000001_create_pose_tables.sql  20251118000002_create_audio_tables.sql
src-tauri/observer-core/: Cargo.toml
src-tauri/observer-core/src/: lib.rs
src-tauri/python/: README.md  diarization_inference.py  emotion_inference.py  mediapipe_inference.py  requirements.txt  whisper_inference.py
src-tauri/rag-pipeline/: Cargo.toml
src-tauri/rag-pipeline/src/: lib.rs
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/core/: audio_recorder.rs  command_analyzer.rs  config.rs  consent.rs  database.rs  emotion_detector.rs  ffmpeg_wrapper.rs  input_recorder.rs  input_storage.rs  keyboard_recorder.rs  ml_models.rs  mod.rs  motion_detector.rs  ocr_engine.rs  ocr_processor.rs  ocr_storage.rs  os_activity.rs  playback_engine.rs  pose_detector.rs  screen_recorder.rs  search_engine.rs  session_manager.rs  speaker_diarizer.rs  speech_transcriber.rs  storage.rs  video_encoder.rs
src-tauri/src/models/: activity.rs  audio.rs  capture.rs  input.rs  mod.rs  ocr.rs  pose.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  power.rs  windows.rs
src-tauri/src/platform/audio/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/input/: README.md  keyboard_linux.rs  keyboard_macos.rs  keyboard_windows.rs  mod.rs  mouse_linux.rs  mouse_macos.rs  mouse_windows.rs
src-tauri/src/platform/os_monitor/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/pose/: mediapipe_bridge.rs  mod.rs
(+24 files in other folders)
