[package]
name = "data-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] } # Updated
tokio = { version = "1.37.0", features = ["full"] }    # Updated
thiserror = "1.0.59"                               # Updated
anyhow = "1.0.82"                                  # Updated
